client/src/components/oppPage.css
.Backdrop{
    position: fixed;
    top: 0;
    left: 0;
    height: 100vh;
    width: 100%;
    background: rgba(151, 151, 151, 0.2);
}

.OppPageWrapper{
    width: 50vw;
    border-radius: 6px;
    box-shadow: 0 4px 10px 0 rgba(173, 173, 173, 0.5);
    background-color: #ffffff;
    padding: 1.5em;
    margin-bottom: 2em;
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    padding: 4em;
    z-index: 11;

    /* margin: 30vh; */
  }
  
  .Title{
      font-weight: 800;
      font-size: 2em;
      padding-top: 2vh;
  
  }
  
  .Tags{
      display: flex;
      padding-top: 1.5vh;
      font-weight: 800px;
  }
  
  .Data{
      border-radius: 6px;
      font-size: 20px;
      
  }
  
  #Amount{
    background-color: rgb(255,109,150,0.3);
    margin-right: 2vw;
    color: #ff6d96;
  
  
  
  }
  
  #Grade{
  background-color: rgb(234,186,4,0.3);
  
  
  color: #eaba04;
  
  
  }
  
  .Deadline{
  color: #686868;
  font-size: 18px;
  padding-top: 1.5vh;
  }
  
  .Tags{
  }
  
  .PageText{
  padding-top: 1.5vh;
  color: #686868;
  font-size: 16px;
  line-height: 1.8;
  font-weight: 300;


  }
  
  .CtaPage{
  padding-top: 1vh;
    font-size: 22px;
    display: grid;
    grid-template-columns: [firstC] 40% [secondC] 60%;
    grid-template-rows: [firstR] 100%;

  
  }
  
  .SharePage{
  outline: none;
  border: 0;
  background-color: white;
  display: flex;

  }

  #ShareButtonPage{
  }

  #ShareButtonText{
    padding-left: 0.7em;
}

.mobileGoBack{
    display: none;
}

.Apply{

}
  
@media screen and (max-width: 650px){

   .OppPageWrapper{
       width: 100%;
       height: 100%;
   }
   .mobileGoBack{
    display: block;
    font-size: 18px;
    color: #686868;
    padding-top: 1em;
}

.mobileGoBack:hover{
    text-decoration: none;
    cursor: pointer;
}
}

